Step 2: Makefile created; Shebang added to bin/brain-games; The section "bin" of composer.json updated

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,14 @@
 {
     "name": "hexlet/code",
+    "description": "Simple console game",
+    "license": "MIT",
     "authors": [
         {
             "name": "Larisa Pronchina"
         }
+    ],
+    "bin": [
+        "bin/brain-games"
     ],
     "require": {}
 }
