Step 8: The Arithmetic progression Game

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "bin/brain-games",
         "bin/brain-even",
         "bin/brain-calc",
-        "bin/brain-gcd"
+        "bin/brain-gcd",
+        "bin/brain-progression"
     ],
     "require": {
         "wp-cli/php-cli-tools": "^0.12.6"
@@ -22,7 +23,8 @@
             "src/Even.php",
             "src/Games/Calc.php",
             "src/Engine.php",
-            "src/Games/GCD.php"
+            "src/Games/GCD.php",
+            "src/Games/Progression.php"
          ]
     },
     "require-dev": {
