--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "bin/brain-even",
         "bin/brain-calc",
         "bin/brain-gcd",
-        "bin/brain-progression"
+        "bin/brain-progression",
+        "bin/brain-prime"
     ],
     "require": {
         "wp-cli/php-cli-tools": "^0.12.6"
@@ -24,7 +25,8 @@
             "src/Games/Calc.php",
             "src/Engine.php",
             "src/Games/GCD.php",
-            "src/Games/Progression.php"
+            "src/Games/Progression.php",
+            "src/Games/Prime.php"
          ]
     },
     "require-dev": {
